fix: CI/CD Automation
Grant the token write permissions for any jobs that require it.

--- a/.github/workflows/auto-version-release.yml
+++ b/.github/workflows/auto-version-release.yml
@@ -8,6 +8,9 @@ concurrency:
   group: release-group
   cancel-in-progress: true
 
+permissions:
+  id-token: write
+
 run-name: ${{ github.actor }} is running avr workflow-selector
 
 jobs:
